РАбота с главной страницей

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,46 @@
         </div>
       </div>
     </div>
-
-    <h1>HELLO FROM HTML BOILERPLATE</h1>
-    <h1>Хотел назвать Серегу ..., но передумал</h1>
-
+    <div class="home">
+      <div class="container">
+        <h1 class="home__title">Всё, что нужно для активного отдыха - у нас</h1>
+        <a href="" class="home__link">Узнать больше</a>
+      </div>
+    </div>
+    <div class="devide">
+      <span></span>
+      <img src="./images/Board.png" />
+      <span></span>
+    </div>
+    <div class="about">
+      <div class="container">
+        <p class="about__text">Блаблабла о компании. Какие мы крутые и тп</p>
+      </div>
+    </div>
+    <div class="devide">
+      <span></span>
+      <img src="./images/Board.png" />
+      <span></span>
+    </div>
+    <div class="services">
+      <div class="container">
+        <h2 class="services__title">Наши услуги</h2>
+        <div class="services__content">
+          <div class="services__item">
+            <span class="services__name">Покупка</span>
+            <img src="./images/services1.png" alt="" class="services__img">
+            <p class="services__text">В нашем магазине вы найдёте всё, что нужно для отдыха в горах</p>
+            <a href="" class="services__link">Перейти к каталогу</a>
+          </div>
+          <div class="services__item">
+            <span class="services__name">Аренда</span>
+            <img src="./images/services2.png" alt="" class="services__img">
+            <p class="services__text">В нашем магазине вы найдёте всё, что нужно для отдыха в горах</p>
+            <a href="" class="services__link">Перейти к каталогу</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="footer">
       <div class="container">
         <img src="./images/logo.png" />
