--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -19,7 +19,7 @@
         <div class="header__navigation">
           <a href="catalog.html" class="header__link">Каталог товаров</a>
           <a href="busket.html" class="header__link">Корзина</a>
-          <a href="profile.html" class="header__link">Личный кабинет</a>
+          <a href="profile.html" class="header__link">Профиль</a>
         </div>
       </div>
     </div>
