--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="stylesheet" href="../css/app.css">
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="header">
@@ -21,6 +21,7 @@
           <a href="busket.html" class="header__link">Корзина</a>
           <a href="profile.html" class="header__link">Профиль</a>
         </div>
+        <div class="burger-menu"><img src="./images/burger.png" /></div>
       </div>
     </div>
 
@@ -31,6 +32,14 @@
         <img src="../images/logo.png" />
       </div>
     </div>
+    <script>
+      $(document).ready(function () {
+        $('.burger-menu').click(function (event) {
+          $('.header__navigation').toggleClass('active');
+          $('body').toggleClass('lock');
+        });
+      });
+    </script>
 </body>
 
 </html>
