--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,15 @@
     </div>
     <div class="footer">
       <div class="container">
-        <img src="./images/logo.png" />
+        <p>8-800-555-35-35</p>
+        <div class="footer__right">
+          <img class="footer-logo" src="./images/logo.png" />
+          <div class="footer__images">
+            <img src="./images/telegram.png" />
+            <img src="./images/inst.png" />
+            <img src="./images/vk.png" />
+          </div>
+        </div>
       </div>
     </div>
     <script>
