--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <h1>Профиль</h1>
+    <div class="devide"><span ></span><h1 class="title-main">Профиль</h1><span></span></div>
 
     <div class="footer">
       <div class="container">
