--- a/src/pages/busket.html
+++ b/src/pages/busket.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <h1>Корзина</h1>
+    <div class="devide"><span ></span><h1 class="title-main">Корзина</h1><span></span></div>
 
     <div class="footer">
       <div class="container">
