--- a/src/pages/busket.html
+++ b/src/pages/busket.html
@@ -13,29 +13,34 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="header">
-      <div class="container">
-        <a href="index.html"><img src="../images/logo.png" /></a>
-        <div class="header__navigation">
-          <a href="catalog.html" class="header__link">Каталог товаров</a>
-          <a href="busket.html" class="header__link">Корзина</a>
-          <a href="profile.html" class="header__link">Профиль</a>
+    <div class="busket">
+      <div class="header">
+        <div class="container">
+          <a href="index.html"><img src="../images/logo.png" /></a>
+          <div class="header__navigation">
+            <a href="catalog.html" class="header__link">Каталог товаров</a>
+            <a href="busket.html" class="header__link">Корзина</a>
+            <a href="profile.html" class="header__link">Профиль</a>
+          </div>
+          <div class="burger-menu"><img src="../images/burger.png" /></div>
         </div>
-        <div class="burger-menu"><img src="../images/burger.png" /></div>
       </div>
-    </div>
-
-    <div class="devide"><span ></span><h1 class="title-main">Корзина</h1><span></span></div>
-
-    <div class="footer">
+      <div class="devide"><span ></span><h1 class="title-main">Корзина</h1><span></span></div>
       <div class="container">
-        <p>8-800-555-35-35</p>
-        <div class="footer__right">
-          <img class="footer-logo" src="./images/logo.png" />
-          <div class="footer__images">
-            <img src="./images/telegram.png" />
-            <img src="./images/inst.png" />
-            <img src="./images/vk.png" />
+        <div class="busket__content">
+          
+        </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+          <p>8-800-555-35-35</p>
+          <div class="footer__right">
+            <img class="footer-logo" src="./images/logo.png" />
+            <div class="footer__images">
+              <img src="./images/telegram.png" />
+              <img src="./images/inst.png" />
+              <img src="./images/vk.png" />
+            </div>
           </div>
         </div>
       </div>
