--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -13,29 +13,61 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="header">
-      <div class="container">
-        <a href="index.html"><img src="../images/logo.png" /></a>
-        <div class="header__navigation">
-          <a href="catalog.html" class="header__link">Каталог товаров</a>
-          <a href="busket.html" class="header__link">Корзина</a>
-          <a href="profile.html" class="header__link">Профиль</a>
+    <div class="profile">
+      <div class="header">
+        <div class="container">
+          <a href="index.html"><img src="../images/logo.png" /></a>
+          <div class="header__navigation">
+            <a href="catalog.html" class="header__link">Каталог товаров</a>
+            <a href="busket.html" class="header__link">Корзина</a>
+            <a href="profile.html" class="header__link">Профиль</a>
+          </div>
+          <div class="burger-menu"><img src="./images/burger.png" /></div>
         </div>
-        <div class="burger-menu"><img src="./images/burger.png" /></div>
       </div>
-    </div>
 
-    <div class="devide"><span ></span><h1 class="title-main">Профиль</h1><span></span></div>
-
-    <div class="footer">
+      <div class="devide"><span ></span><h1 class="title-main">Профиль</h1><span></span></div>
       <div class="container">
-        <p>8-800-555-35-35</p>
-        <div class="footer__right">
-          <img class="footer-logo" src="./images/logo.png" />
-          <div class="footer__images">
-            <img src="./images/telegram.png" />
-            <img src="./images/inst.png" />
-            <img src="./images/vk.png" />
+
+        <div class="profile__content">
+          <div class="profile__left">
+            <div class="profile__field">
+              <label>Имя, фамилия, отчество</label>
+              <input type="text" value="Макаров Сергей Михайлович" />
+            </div>
+            <div class="profile__field">
+              <label>Телефон</label>
+              <input type="phone" value="8-800-555-35-35" />
+            </div>
+            <div class="profile__field">
+              <label>Платёжная карта</label>
+              <input type="text" value="000 000 000 000" />
+            </div>
+          </div>
+          <div class="profile__right">
+            <div class="profile__field">
+              <label>E-mail</label>
+              <input type="mail" value="mymail@mail.ru" />
+            </div>
+            <div class="profile__field">
+              <label>Арес</label>
+              <input type="text" value="г. Екатеринбург, ул. Кукушкина, 13" />
+            </div>
+            <button class="profile__button">Редактировать данные</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer">
+        <div class="container">
+          <p>8-800-555-35-35</p>
+          <div class="footer__right">
+            <img class="footer-logo" src="./images/logo.png" />
+            <div class="footer__images">
+              <img src="./images/telegram.png" />
+              <img src="./images/inst.png" />
+              <img src="./images/vk.png" />
+            </div>
           </div>
         </div>
       </div>
