--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -58,6 +58,32 @@
         </div>
       </div>
 
+      <div class="devide"><span ></span><h1 class="title-main">История заказов</h1><span></span></div>
+        <div class="profile__history">
+          <div class="container">
+            <div class="profile__history__container">
+              <div class="profile__history-row">
+                <div class="profile__history-item">Наименование товара</div>
+                <div class="profile__history-item">Количество</div>
+                <div class="profile__history-item">Цена</div>
+                <div class="profile__history-item">Дата</div>
+              </div>
+              <div class="profile__history-row">
+                <div class="profile__history-item">Горнолыжные лыжи</div>
+                <div class="profile__history-item">1</div>
+                <div class="profile__history-item">15000</div>
+                <div class="profile__history-item">02.12.2021</div>
+              </div>
+              <div class="profile__history-row">
+                <div class="profile__history-item">Сноуборд</div>
+                <div class="profile__history-item">3</div>
+                <div class="profile__history-item">45000</div>
+                <div class="profile__history-item">02.12.2021</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       <div class="footer">
         <div class="container">
           <p>8-800-555-35-35</p>
