--- a/src/pages/busket.html
+++ b/src/pages/busket.html
@@ -28,6 +28,36 @@
       <div class="devide"><span ></span><h1 class="title-main">Корзина</h1><span></span></div>
       <div class="container">
         <div class="busket__content">
+          <div class="busket__item">
+            <p>Сноуборд BURTON FEELGOOD SMALLS<br />Артикул: 152385 FW22</p>
+            <img src="../images/snow.jpg" />
+            <span class="busket__count">Количество:<br />2</span>
+            <span class="busket__price">30 000 руб.</span>
+          </div>
+           <div class="busket__item">
+            <p>Сноуборд BURTON FEELGOOD SMALLS<br />Артикул: 152385 FW22</p>
+            <img src="../images/snow.jpg" />
+            <span class="busket__count">Количество:<br />2</span>
+            <span class="busket__price">30 000 руб.</span>
+          </div>
+           <div class="busket__item">
+            <p>Сноуборд BURTON FEELGOOD SMALLS<br />Артикул: 152385 FW22</p>
+            <img src="../images/snow.jpg" />
+            <span class="busket__count">Количество:<br />2</span>
+            <span class="busket__price">30 000 руб.</span>
+          </div>
+           <div class="busket__item">
+            <p>Сноуборд BURTON FEELGOOD SMALLS<br />Артикул: 152385 FW22</p>
+            <img src="../images/snow.jpg" />
+            <span class="busket__count">Количество:<br />2</span>
+            <span class="busket__price">30 000 руб.</span>
+          </div>
+           <div class="busket__item">
+            <p>Сноуборд BURTON FEELGOOD SMALLS<br />Артикул: 152385 FW22</p>
+            <img src="../images/snow.jpg" />
+            <span class="busket__count">Количество:<br />2</span>
+            <span class="busket__price">30 000 руб.</span>
+          </div>
           
         </div>
       </div>
