--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -55,11 +55,11 @@
         </p>
         <div class="catalog__item-price">
           <p>30 000 руб.</p>
-          <div class="catalog__item-buck">
+          <div class="catalog__item-buck buckk">
             <img src="../images/buck.png" />
           </div>
         </div>
-        <p class="catalog__item-true">
+        <p class="catalog__item-false">
           Есть в наличии
         </p>
       </div>
