--- a/src/index.html
+++ b/src/index.html
@@ -53,13 +53,13 @@
             <span class="services__name">Покупка</span>
             <img src="./images/services1.png" alt="" class="services__img">
             <p class="services__text">В нашем магазине вы найдёте всё, что нужно для отдыха в горах</p>
-            <a href="" class="services__link">Перейти к каталогу</a>
+            <a href="catalog.html" class="services__link">Перейти к каталогу</a>
           </div>
           <div class="services__item">
             <span class="services__name">Аренда</span>
             <img src="./images/services2.png" alt="" class="services__img">
             <p class="services__text">В нашем магазине вы найдёте всё, что нужно для отдыха в горах</p>
-            <a href="" class="services__link">Перейти к каталогу</a>
+            <a href="catalog.html" class="services__link">Перейти к каталогу</a>
           </div>
         </div>
       </div>
