--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -60,7 +60,7 @@
           </div>
         </div>
         <p class="catalog__item-false">
-          Есть в наличии
+          Нет в наличии
         </p>
       </div>
       <div class="catalog__item">
