--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -26,118 +26,125 @@
     </div>
     <div class="devide"><span ></span><h1 class="title-main">Каталог товаров</h1><span></span></div>
     <div class="container">
-    <div class="catalog__content">
-      <div class="catalog__item">
-        <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
-        <span class="catalog__item-art">Артикул: 152385 FW22</span>
-        <img src="../images/snow.jpg" />
-        <p class="catalog__item-desc">
-          Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
-          Даже Сергей-пёс и Арина-попуг
-        </p>
-        <div class="catalog__item-price">
-          <p>30 000 руб.</p>
-          <div class="catalog__item-buck">
-            <img src="../images/buck.png" />
+      <div class="catalog__content">
+        <div class="catalog__item">
+          <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
+          <span class="catalog__item-art">Артикул: 152385 FW22</span>
+          <img src="../images/snow.jpg" />
+          <p class="catalog__item-desc">
+            Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
+            Даже Сергей-пёс и Арина-попуг
+          </p>
+          <div class="catalog__item-price">
+            <p>30 000 руб.</p>
+            <div class="catalog__item-buck">
+              <img src="../images/buck.png" />
+            </div>
           </div>
+          <p class="catalog__item-true">
+            Есть в наличии
+          </p>
         </div>
-        <p class="catalog__item-true">
-          Есть в наличии
-        </p>
-      </div>
-      <div class="catalog__item">
-        <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
-        <span class="catalog__item-art">Артикул: 152385 FW22</span>
-        <img src="../images/snow.jpg" />
-        <p class="catalog__item-desc">
-          Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
-          Даже Сергей-пёс и Арина-попуг
-        </p>
-        <div class="catalog__item-price">
-          <p>30 000 руб.</p>
-          <div class="catalog__item-buck buckk">
-            <img src="../images/buck.png" />
+        <div class="catalog__item">
+          <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
+          <span class="catalog__item-art">Артикул: 152385 FW22</span>
+          <img src="../images/snow.jpg" />
+          <p class="catalog__item-desc">
+            Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
+            Даже Сергей-пёс и Арина-попуг
+          </p>
+          <div class="catalog__item-price">
+            <p>30 000 руб.</p>
+            <div class="catalog__item-buck buckk">
+              <img src="../images/buck.png" />
+            </div>
           </div>
+          <p class="catalog__item-false">
+            Нет в наличии
+          </p>
         </div>
-        <p class="catalog__item-false">
-          Нет в наличии
-        </p>
-      </div>
-      <div class="catalog__item">
-        <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
-        <span class="catalog__item-art">Артикул: 152385 FW22</span>
-        <img src="../images/snow.jpg" />
-        <p class="catalog__item-desc">
-          Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
-          Даже Сергей-пёс и Арина-попуг
-        </p>
-        <div class="catalog__item-price">
-          <p>30 000 руб.</p>
-          <div class="catalog__item-buck">
-            <img src="../images/buck.png" />
+        <div class="catalog__item">
+          <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
+          <span class="catalog__item-art">Артикул: 152385 FW22</span>
+          <img src="../images/snow.jpg" />
+          <p class="catalog__item-desc">
+            Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
+            Даже Сергей-пёс и Арина-попуг
+          </p>
+          <div class="catalog__item-price">
+            <p>30 000 руб.</p>
+            <div class="catalog__item-buck">
+              <img src="../images/buck.png" />
+            </div>
           </div>
+          <p class="catalog__item-true">
+            Есть в наличии
+          </p>
         </div>
-        <p class="catalog__item-true">
-          Есть в наличии
-        </p>
-      </div>
-      <div class="catalog__item">
-        <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
-        <span class="catalog__item-art">Артикул: 152385 FW22</span>
-        <img src="../images/snow.jpg" />
-        <p class="catalog__item-desc">
-          Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
-          Даже Сергей-пёс и Арина-попуг
-        </p>
-        <div class="catalog__item-price">
-          <p>30 000 руб.</p>
-          <div class="catalog__item-buck">
-            <img src="../images/buck.png" />
+        <div class="catalog__item">
+          <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
+          <span class="catalog__item-art">Артикул: 152385 FW22</span>
+          <img src="../images/snow.jpg" />
+          <p class="catalog__item-desc">
+            Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
+            Даже Сергей-пёс и Арина-попуг
+          </p>
+          <div class="catalog__item-price">
+            <p>30 000 руб.</p>
+            <div class="catalog__item-buck">
+              <img src="../images/buck.png" />
+            </div>
           </div>
+          <p class="catalog__item-true">
+            Есть в наличии
+          </p>
         </div>
-        <p class="catalog__item-true">
-          Есть в наличии
-        </p>
-      </div>
-      <div class="catalog__item">
-        <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
-        <span class="catalog__item-art">Артикул: 152385 FW22</span>
-        <img src="../images/snow.jpg" />
-        <p class="catalog__item-desc">
-          Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
-          Даже Сергей-пёс и Арина-попуг
-        </p>
-        <div class="catalog__item-price">
-          <p>30 000 руб.</p>
-          <div class="catalog__item-buck">
-            <img src="../images/buck.png" />
+        <div class="catalog__item">
+          <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
+          <span class="catalog__item-art">Артикул: 152385 FW22</span>
+          <img src="../images/snow.jpg" />
+          <p class="catalog__item-desc">
+            Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
+            Даже Сергей-пёс и Арина-попуг
+          </p>
+          <div class="catalog__item-price">
+            <p>30 000 руб.</p>
+            <div class="catalog__item-buck">
+              <img src="../images/buck.png" />
+            </div>
           </div>
+          <p class="catalog__item-true">
+            Есть в наличии
+          </p>
         </div>
-        <p class="catalog__item-true">
-          Есть в наличии
-        </p>
-      </div>
-      <div class="catalog__item">
-        <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
-        <span class="catalog__item-art">Артикул: 152385 FW22</span>
-        <img src="../images/snow.jpg" />
-        <p class="catalog__item-desc">
-          Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
-          Даже Сергей-пёс и Арина-попуг
-        </p>
-        <div class="catalog__item-price">
-          <p>30 000 руб.</p>
-          <div class="catalog__item-buck">
-            <img src="../images/buck.png" />
+        <div class="catalog__item">
+          <h2>Сноуборд BURTON FEELGOOD SMALLS</h2>
+          <span class="catalog__item-art">Артикул: 152385 FW22</span>
+          <img src="../images/snow.jpg" />
+          <p class="catalog__item-desc">
+            Детский сноуборд + описание бла-бла-бла, какой крутой сноуборд, все его хотят.
+            Даже Сергей-пёс и Арина-попуг
+          </p>
+          <div class="catalog__item-price">
+            <p>30 000 руб.</p>
+            <div class="catalog__item-buck">
+              <img src="../images/buck.png" />
+            </div>
           </div>
+          <p class="catalog__item-true">
+            Есть в наличии
+          </p>
         </div>
-        <p class="catalog__item-true">
-          Есть в наличии
-        </p>
       </div>
     </div>
-    </div>
-
+    <div class="devide"><span ></span><h1 class="title-main">Рассылка</h1><span></span></div>
+    <form action="" class="form-contact">
+      <div class="container">
+        <label for="">Введите email</label>
+        <input type="email" required>
+        <input type="submit" class="button"/>
+      </div>
+    </form>
     <div class="footer">
       <div class="container">
         <p>8-800-555-35-35</p>
